# workflow

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: main.rs
src/cmd/: describe.rs  dump.rs  mod.rs  run.rs
src/grammars/: workflow.pest
src/parser/: mod.rs  type_builder.rs  var.rs  workflow_content.rs
src/runner/: mod.rs  variable_store.rs  workflow_delegate.rs
src/stdlib/: README.md  action.rs  arg_spec.rs  errors.rs  format.rs  mod.rs  next.rs  node.rs  parse_delegate.rs  setter.rs  tool.rs  variable.rs  variable_resolver.rs  workflow.rs
src/stdlib/legacy/: mod.rs  tool.rs  variable.rs
src/stdlib/parser/: mod.rs  parse_context.rs
src/stdlib/variables/: format.rs  mod.rs  variable.rs  variable_store.rs
src/test_data/: example.star  example.workflow  ideas.star  legacy_vars_only.workflow  vars_only.workflow
src/workflow/: mod.rs  workflow_context.rs
