[package]
name = "workflow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
allocative = "0.3.3"
ansi_term = "0.12.1"
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
regex = "1.10.6"
starlark = "0.12.0"
thiserror = "1.0.63"
uuid = { version =  "1.10.0", features = ["v4"] }
which = "6.0.3"

[dev-dependencies]
tempfile = "3.12.0"
